# s21_3DViewer

./: README_RUS.md
build-src-Desktop-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-src-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-6207bf656b4010a10414.json  cmakeFiles-v1-0a14994d0df061404a18.json  codemodel-v2-eeef040e57280cc5d976.json  directory-QtGifImage.src-Debug-3fa27131a523ffa824c2.json  directory-QtGifImage.src.3rdParty-Debug-77d8804e857a359f2d58.json  index-2023-10-25T09-43-57-0030.json  target-3DViewer-Debug-8b9ad10e1199b13c3d15.json  target-3DViewer_autogen-Debug-fc93e39a2d83aa8a7c97.json  target-3DViewer_autogen_timestamp_deps-Debug-25d79f3e110aae7496b9.json  target-QtGifImage-Debug-21faea80f6671f7d43b6.json  target-QtGifImage_autogen-Debug-cd4a588e5ec6c6c35a75.json  target-QtGifImage_autogen_timestamp_deps-Debug-369e292c931f54125f2c.json  target-backend-Debug-d9f44c0eff1a8ddf5730.json  target-backend_autogen-Debug-954dc0e9c022f1b1157a.json  target-backend_autogen_timestamp_deps-Debug-99ccb33174c2ba951e05.json  target-giflib-Debug-99dc417b5907e390bc7e.json  target-giflib_autogen-Debug-52b2eb465486ff0fac63.json  target-giflib_autogen_timestamp_deps-Debug-75eb60f916577c3f1287.json
build-src-Desktop-Debug/QtGifImage/src/: cmake_install.cmake
build-src-Desktop-Debug/backend/: cmake_install.cmake
src/: CMakeLists.txt  Makefile
src/QtGifImage/src/: CMakeLists.txt
src/backend/: CMakeLists.txt  Makefile  affinity.c  objparser.c  v3d.h
src/backend/tests/: footer.check  header.check  test_make_obj.check  test_move_obj.check  test_rotate_obj.check  test_scale_obj.check
src/frontend/: mainwindow.cpp  mainwindow.h  mainwindow.ui  widgetogl.cpp  widgetogl.h
src/models/: Lancer.txt  cube_1.txt  cube_2.txt  error.txt
